# mktorrent-py

./: README.md  pyproject.toml  requirements.txt
mktorrent/: __init__.py  mktorrent.py
